Add initial support for DataScience controller