@@ -220,6 +220,11 @@
           <version>1.20.1</version>
       </dependency>
       <dependency>
+      <groupId>com.github.jsqlparser</groupId>
+      <artifactId>jsqlparser</artifactId>
+      <version>5.3</version>
+  </dependency>
+      <dependency>
           <groupId>edu.cmu.sphinx</groupId>
           <artifactId>sphinx4-core</artifactId>
           <version>5prealpha-SNAPSHOT</version>
@@ -229,6 +234,42 @@
           <groupId>edu.cmu.sphinx</groupId>
           <artifactId>sphinx4-data</artifactId>
           <version>5prealpha-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+          <groupId>ai.djl</groupId>
+          <artifactId>api</artifactId>
+          <version>0.34.0</version>
+      </dependency>
+      <dependency>
+          <groupId>ai.djl.pytorch</groupId> <!-- Ou ai.djl.huggingface, dependendo do suporte -->
+          <artifactId>pytorch-engine</artifactId>
+          <version>0.34.0</version> <!-- Use a versão mais recente disponível -->
+          <scope>runtime</scope>
+      </dependency>
+      <dependency>
+          <groupId>ai.djl.huggingface</groupId>
+          <artifactId>tokenizers</artifactId>
+          <version>0.34.0</version> <!-- Use a mesma versão do DJL -->
+      </dependency>
+      <dependency>
+          <groupId>ai.djl.onnxruntime</groupId>
+          <artifactId>onnxruntime-engine</artifactId>
+          <version>0.34.0</version>
+      </dependency>
+      <dependency>
+          <groupId>com.github.oshi</groupId>
+          <artifactId>oshi-core</artifactId>
+          <version>6.4.7</version>
+  </dependency>
+      <dependency>
+      <groupId>com.github.haifengl</groupId>
+      <artifactId>smile-core</artifactId>
+      <version>4.4.0</version>
+  </dependency>
+      <dependency>
+          <groupId>com.github.haifengl</groupId>
+          <artifactId>smile-plot</artifactId>
+          <version>2.6.0</version>
       </dependency>
   </dependencies>
 
@@ -241,6 +282,7 @@
         <configuration>
           <source>24</source>
           <target>24</target>
+            <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
         <plugin>
